# BlackMyth_Zhongkui

./: CMakeLists.txt  README.md
assets/: credits.txt
play_demo/assets/: credits.txt
src/: enemy.cpp  enemy.h  main.cpp  player.cpp  player.h  scene_logo.cpp  scene_logo.h  scene_main.cpp  scene_main.h  scene_title.cpp  scene_title.h  screne_main.cpp  screne_main.h  spwaner.cpp  spwaner.h  weapon_thunder.cpp  weapon_thunder.h
src/affiliate/: affiliate_bar.cpp  affiliate_bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_label.cpp  text_label.h
src/core/: actor.cpp  actor.h  asset_store.cpp  asset_store.h  defs.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h  screne.cpp  screne.h
src/raw/: bg_star.cpp  bg_star.h  states.cpp  states.h  timer.cpp  timer.h  weapon.cpp  weapon.h
src/screen/: hud_button.cpp  hud_button.h  hud_skill.cpp  hud_skill.h  hud_states.cpp  hud_states.h  hud_text.cpp  hud_text.h  ui_mouse.cpp  ui_mouse.h
src/world/: effect.cpp  effect.h  spell.cpp  spell.h
